@@ -1,3 +1,3 @@
-EBUILD libass-9999-r1.ebuild 810 RMD160 a9b7b50c62a4b495962b33ef5235587351da72c8 SHA1 9207c6038fc6a617005af8b684236a389a346d03 SHA256 73dab005576fa7a3874a915b78786d1d5cfbfc9fa0a3c14412e37a1d3ab2d9db
-MISC ChangeLog 491 RMD160 3dc70e1458dc7c943c5d051871778e605cb108b1 SHA1 a6d7741b6a0a33fa0463873b715f5ca58c069098 SHA256 b0ba9ad788c1d140ebaab21ab3c6e3ed62cb66d20c847874ba24f39fa9d477f7
+EBUILD libass-9999.ebuild 824 RMD160 dde57c26ea29508022375b8863e89f081d6e49ed SHA1 24e0bc033b569637f551423c1ea7919303b1c633 SHA256 4611e19e46deca0aa1061bc7ce296c543eb885597ac78dc531248db1ca4dcc05
+MISC ChangeLog 645 RMD160 b46d727cc1e4b5b10aa815bc9cbfdc9e19df76a0 SHA1 5246285c317cdccc442dcc9272f20ad5b76145cd SHA256 6e9393a2af84b5368467ca602d663d85e80708a38e04c6b2b9f41f621baa0d60
 MISC metadata.xml 318 RMD160 04fbbbc2659e57cca01100801950aab20582f96f SHA1 e15ee10875cdaf0253ee9c11e8b1173a62fb0685 SHA256 3969751760d92f50b10c0e6379a34103d92d9e04baba5530d2f64093771b5717
